--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
         <h1>Contact Us</h1>
         <nav>
             <ul>
-                <a href="Index.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="program.html">Programs</a>
                 <a href="about us.html">About Us</a>
                 <a href="contact.html">Contact </a>
